enigma_project/tests/error/rotornameerr.inp
* B BETA III IV potato AXLE